# TSCGlue

./: .gitignore  001-validation-vs-test-acc.ipynb  002-model-performance.ipynb  003-model-all.ipynb  004-model-comparison.ipynb  005-ensamble-check.ipynb  006-catch22-check.ipynb.ipynb  007-catch22-vs-rocket.ipynb  010-new_estimator.ipynb  020-benchmarking-model.ipynb  021-val-test-loss.ipynb  032-stacking.ipynb  033-shuffle-vs-no-shuffle.ipynb  040-oof-predictions-2.ipynb  042-stacking-2.ipynb  043-transformations.ipynb  050-val-test-corr.ipynb  052-speedup.ipynb  052.ipynb  053-rstsf.ipynb  1763450214431837427.keras  Makefile  README.md  bench-res.ipynb  check_cuda.py  feature-wrapper-mod.ipynb  gpu-test.ipynb  hf.ipynb  hydramod.ipynb  neki.ipynb  old_002-model-performance.ipynb  pyproject.toml  ray-workflow.ipynb  raytest.py  run_benchmark.py  run_models.py  run_stacking.py  splits.ipynb  test.ipynb  test_ray_queue.py  (+3 more)
.github/workflows/: publish.yml  tests.yml
autotsc/: data_loader.py  gpu_models.py  models.py  models2.py  old_models.py  transformers.py  utils.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
experimental/: ray-store.py  run_stacking.py  run_stacking2.py  run_stacking2.slurm  run_timing.py  run_timing.slurm  run_worms.py  test_ray_queue.py  time_benchmark.py  time_benchmark.slurm
notebooks/: 004-model-comparison.ipynb  007-catch22-vs-rocket.ipynb  010-new_estimator.ipynb  020-benchmarking-model.ipynb  021-val-test-loss.ipynb  022-val-test-loss-correct.ipynb  030-downsampling.ipynb  031-subset.ipynb  032-stacking.ipynb  033-shuffle-vs-no-shuffle.ipynb  034-quant-catboost.ipynb  040-oof-predictions-2.ipynb  041-oof-3.ipynb  042-stacking-2.ipynb  043-transformations.ipynb  050-val-test-corr.ipynb  051-dataset-resample-detection.ipynb  052-speedup.ipynb  053-lokystacker-timing.ipynb  053-rstsf.ipynb  054-dr-cif.ipynb  055-ablation-study.ipynb  055-speed-comparison.ipynb  056-gpu-rocket.ipynb  057-rocket-subsempling-features.ipynb  060-rocket-types.ipynb  062-timing-benchmark.ipynb  064-missing-data.ipynb  065-multifold.ipynb  066-auto-fold-size.ipynb  067-tsfm-mantis.ipynb  068-transformers.ipynb  069-tabicl.ipynb  070-quant-features.ipynb  071-multirocket-tabicl.ipynb  072-tsfresh-features.ipynb  QUANTClassifier-benchmark.ipynb  TASKS.md  autogluon_tabular_demo.ipynb  bakeoff.ipynb  (+33 more)
tests/: run_chronos2_embedding.py  run_embeddings.py  run_verbose.py  test_interval_models.py  test_model.py  test_s3_file_cache.py  test_transformers.py  test_tscglue.py  test_tsfm.py
tscglue/: __init__.py  data_loader.py  drcif_features.py  fallback.py  gpu_models.py  interval_models.py  models.py  models2.py  models_tsfm.py  old_models.py  transformers.py  utils.py
tscglue_runs/7ac6f9e16f79423a/features_training/: X.npy  Xt_hydra_s_318541739.npy
tscglue_runs/7ac6f9e16f79423a/models/: transformer_hydra_s_318541739.pkl  transformer_multirocket_s_919395384.pkl  transformer_quant.pkl  transformer_rdst_s_1827089436.pkl
tscglue_runs/8110635177024a4e/features_training/: X.npy  Xt_quant.npy
tscglue_runs/8110635177024a4e/models/: transformer_hydra_s_1002238105.pkl  transformer_multirocket_s_838325346.pkl  transformer_quant.pkl  transformer_rdst_s_219875732.pkl
