[project]
name = "tscglue"
version = "0.1.1"
description = "Automatic Time Series Classification"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "polars",
    "scikit-learn",
    "tqdm",
    "seaborn",
    "torch",
    "aeon>=1.3.0",
    "pytorch-lightning",
    "huggingface-hub",
    "imblearn",
    "click",
    "pyarrow",
    "statsmodels",
    "tabicl",
    "tsfresh"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "isort",
    "pytest",
    "s3fs",
    "boto3",
    "awscli",
    "moto[s3]",
]
notebooks = [
    "jupyter",
    "jupyterlab",
    "ipykernel",
    "hvplot",
    "pandas",
    "transformers",
    "accelerate",
    "chronos-forecasting",
    "mantis-tsfm",
    "catboost",
    "lightgbm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tscglue"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N803", "N806"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
