[project]
name = "tscglue"
version = "0.1.1"
description = "Automatic Time Series Classification"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "polars==1.38.1",
    "scikit-learn==1.7.2",
    "tqdm==4.67.3",
    "seaborn==0.13.2",
    "torch==2.10.0",
    "aeon==1.3.0",
    "pytorch-lightning==2.6.1",
    "huggingface-hub==0.36.2",
    "imbalanced-learn==0.14.1",
    "click==8.3.1",
    "pyarrow==23.0.1",
    "statsmodels==0.14.6",
    "tabicl==2.0.3",
    "tsfresh==0.21.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.2",
    "isort==8.0.0",
    "pytest==9.0.2",
    "s3fs==0.4.2",
    "boto3==1.42.54",
    "awscli==1.44.44",
    "moto[s3]==5.1.21",
]
notebooks = [
    "jupyter==1.1.1",
    "jupyterlab==4.5.4",
    "ipykernel==7.2.0",
    "hvplot==0.12.2",
    "pandas==2.3.3",
    "transformers==4.57.6",
    "accelerate==1.12.0",
    "chronos-forecasting==2.2.2",
    "mantis-tsfm==1.0.0",
    "catboost==1.2.10",
    "lightgbm==4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tscglue"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N803", "N806"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
