[project]
name = "tscglue"
version = "0.1.2"
description = "Automatic Time Series Classification"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "polars",
    "scikit-learn",
    "tqdm",
    "seaborn",
    "aeon>=1.3.0",
    "huggingface-hub",
    "imblearn",
    "click",
    "pyarrow",
    "statsmodels",
    "tabicl",
    "tsfresh",
    "catboost",
    "lightgbm",
]

[project.optional-dependencies]
torch = [
    "torch",
    "pytorch-lightning",
    "chronos-forecasting",
    "mantis-tsfm>=1.0.0",
    "transformers",
    "accelerate",
]
cpu = [
    "torch",
    "pytorch-lightning",
    "chronos-forecasting",
    "mantis-tsfm>=1.0.0",
    "transformers",
    "accelerate",
]
cu124 = [
    "torch",
    "pytorch-lightning",
    "chronos-forecasting",
    "mantis-tsfm>=1.0.0",
    "transformers",
    "accelerate",
]
dev = [
    "ruff",
    "isort",
    "pytest",
    "s3fs",
    "boto3",
    "awscli",
    "moto[s3]",
]
autogluon = [
    "autogluon.tabular",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tscglue"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N803", "N806"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu124" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
